alignment problem solve

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -295,12 +295,17 @@
     margin: 0px 20px;
     background-color: #FFED00;
 }
-
+/* 
 .second p{
     font-family: "Barlow Condensed", sans-serif;
     text-align: center;
     letter-spacing: 5px;
-}
+} */
 .text-container-set h1{
     font-family: "Barlow Condensed", sans-serif;
+}
+.text-container-set p{
+    text-align: center;
+    font-family: "Barlow Condensed", sans-serif;
+    letter-spacing: 5px;
 }
